# csc1061-capstone

./: .clang-tidy  CMakeLists.txt  build.sh  compile_commands.json  main.cpp
assets/ascii_art/: titlescreen.txt
include/: config.h  entity.h  game.h  generation.h  input.h  level.h  rgb.h  room.h  terminal.h  tile.h  ui.h  utils.h  viewport.h
src/: config.cpp  entity.cpp  game.cpp  generation.cpp  input.cpp  level.cpp  main.cpp  rgb.cpp  room.cpp  terminal.cpp  ui.cpp  utils.cpp  viewport.cpp
